--- a/app/views/user_mailer/daily_report_email.html.erb
+++ b/app/views/user_mailer/daily_report_email.html.erb
@@ -5,7 +5,32 @@
   </head>
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
-    	Total Users: <%= (User.all.count - 15) %>.  (Not counting people who signed up in beta, which was 15.)
+	    <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
+	      <tr>
+	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: center;">Status</td>
+	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: center;">Count</td>
+	      </tr>
+	      <tr>
+	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">Active</td>
+	        <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;"><%= User.where(status: 0).all.count %></td>
+	      </tr>
+	      <tr>
+	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">Unsubscribed</td>
+	        <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;"><%= User.where(status: 1).all.count %></td>
+	      </tr>
+	      <tr>
+	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">Spam</td>
+	        <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;"><%= User.where(status: 2).all.count %></td>
+	      </tr>
+	      <tr>
+	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">Beta</td>
+	        <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;"><%= User.where(status: 3).all.count %></td>
+	      </tr>
+	      <tr>
+	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">Dev</td>
+	        <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;"><%= User.where(status: 4).all.count %></td>
+	      </tr>
+	    </table>
     </div>
   </body>
 </html>
