--- a/app/views/user_mailer/daily_report_email.html.erb
+++ b/app/views/user_mailer/daily_report_email.html.erb
@@ -7,8 +7,8 @@
     <div id="main">
 	    <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
 	      <tr>
-	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: center;">Status</td>
-	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: center;">Count</td>
+	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: left;">Status</td>
+	        <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 6px; text-align: right;">Count</td>
 	      </tr>
 	      <tr>
 	        <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">Active</td>
