add faq page and content; add unsubscribe page; modify footer in site and email to have proper links and better text; remove the we are NOT financial advisors bit; add our last names to homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -113,15 +113,15 @@
 		<div class="main-section" id="section-who">
 			<div class="three-column-div three-column-margin">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
-				<p>Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
+				<p>Joe Ollis is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
 			</div>
 			<div class="three-column-div three-column-margin">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
-				<p>Gary is also a Microsoftie.  He's also a web development nerd, and he'll talk your ear off about the benefits of a plant-based diet.</p>
+				<p>Gary Voronel is also a Microsoftie.  He's also a web development nerd, and he'll talk your ear off about the benefits of a plant-based diet.</p>
 			</div>
 			<div class="three-column-div">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
-				<p>Xavier is an investment guru.  He is a CFA&reg; charter holder with more than 10 years of experience building financial models.</p>
+				<p>Xavier Bengoechea is an investment guru.  He is a CFA&reg; charter holder with more than 10 years of experience building financial models.</p>
 			</div>
 			<div class="clear-div"></div>
 		</div>
