--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -53,22 +53,11 @@
             <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 10px; text-align: right;">100.00%</td>
           </tr>
         </table>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Contact Us</h3>
-        <p>Questions? Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Frequently Asked Questions</h3>
-        <p>Question: by when should I complete the initial rebalance?<br />
-        Answer: you should complete this rebalance by April 30.</p>
-        <p>Question: on what day of the month will you be sending future rebalance notifications?<br />
-        Answer: in the future, we'll send you new allocations on the 1st of every month.</p>
-        <p>Question: when will my next rebalance notification be?<br />
-        Answer: your next rebalance notification will be on June 1.</p>
-        <p>Question: will you send rebalance notifications every month or only when there are significant changes?<br />
-        Answer: we will send you rebalance notifications every month even if they are small.</p>
+        <p style="font-style: italic; font-size: 70%;">* Rebalancing to these allocations may result in a round-trip warning if you have rebalanced your portoflio within the past 30 days.</p>
         <br /><hr />
-        <div>
-          <p style="font-style: italic; font-size: 80%;">* Rebalancing to these allocations may result in a round-trip warning if you have rebalanced your portoflio within the past 30 days.</p>
-          <p style="font-style: italic; font-size: 80%;">We are NOT investment advisors. See our <a href="http://www.msft401k.com/terms">Terms</a>.</p>
-          <p style="font-style: italic; font-size: 80%;">Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.</p>
+        <div style="font-size: 80%; font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;">
+          <p><a href="http://www.msft401k.com/faq">FAQ</a> | <a href="mailto:team@MSFT401k.com">Contact Us</a> | <a href="http://www.msft401k.com/terms">Terms</a> | <a href="http://www.msft401k.com/unsubscribe">Unsubscribe</a></p>          
+          <p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable. It is recommended that you consult a stockbroker or financial advisor before buying or selling securities, or making any investment decisions.</p>
         </div>
       </div>
     </div>
