--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -98,6 +98,7 @@ body {
 	background-origin: padding-box;
 	font-size: 110%;
 	p { line-height: 190%; }
+	li { line-height: 190%; }
 	h2 { margin-top: 70px; margin-bottom: 30px; }
 	h2:first-of-type { margin-top: 40px; }
 	h3 { margin-top: 50px; margin-bottom: 20px; }
@@ -121,6 +122,7 @@ body {
 	background-origin: padding-box;
 	font-size: 110%;
 	p { line-height: 190%; }
+	li { line-height: 190%; }
 	h2 { margin-top: 70px; margin-bottom: 30px; }
 	h2:first-of-type { margin-top: 40px; }
 	h3 { margin-top: 50px; margin-bottom: 20px; }
@@ -286,4 +288,8 @@ a:hover, a:active {
 	padding: 5px 30px 26px 30px; 
 	margin: 30px 0px; 
 	border: 1px solid #BBBBBB;
+}
+
+.faq-question-list p {
+	padding-left: 22px; text-indent: -22px; margin-top: 0em; margin-bottom: 0em;
 }
