--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -1,25 +1,5 @@
 <%= render 'layouts/header_other' %>
 
-<script>
-	function scroll_to_top(){
-		$("html, body").animate({scrollTop: 0}, 1000);
-	}
-
-	function top_link_scroll(link_target) {
-		if (link_target == "") return;
-		$("html, body").animate(
-			{ scrollTop: $('#section-' + link_target).offset().top - 100 }, 1000);
-	}
-
-	function handle_hash() {
-		top_link_scroll(window.location.hash.substring(1));
-	}
-
-	$("#navbar a").click(function(event) {
-	  event.preventDefault();
-	});
-</script>
-
 <div id="poster">
 	<div id="header-background"></div>
 	<div class="content">
@@ -81,7 +61,7 @@
 		<div class="white-box">
 			<h3>Step 1: click 'Investments Elections'<sup>**</sup></h3>
 			<img width="740" src="assets/stepbystep/FutureStep1.png" alt="Step 1 - Future Contributions" />
-			<br /><span style="font-style: italic; font-size: 80%;">** On the 'Change Investments' page after following steps 1-4 of <a href="#" onclick="top_link_scroll('current')">Rebalance Current Investments</a>.</span>
+			<br /><span style="font-style: italic; font-size: 80%;">** On the 'Change Investments' page after following steps 1-4 of <a class="smoothscroll" href="#" onclick="top_link_scroll('current')">Rebalance Current Investments</a>.</span>
 		</div>
 		<div class="white-box"><h3>Step 2: click 'Select Funds'
 		</h3>
