--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 <footer id="footer">
 	<div class="content">
-		<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
-		<p>Questions? <a href="mailto:team@MSFT401k.com">Contact Us</a>.</p>
-		<p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.</p>
-		<p>CFA&reg; is a registered trademark owned by CFA Institute.</p>
+		<p><a href="faq">FAQ</a> | <a href="mailto:team@MSFT401k.com">Contact Us</a> | <a href="terms">Terms</a></p>
+		<p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable. It is recommended that you consult a stockbroker or financial advisor before buying or selling securities, or making any investment decisions.</p>
+		<p>CFA&reg; is a registered trademark owned by <a href="https://www.cfainstitute.org/">CFA Institute</a>.</p>
 	</div>
 </footer>
