fix typo in unsub page

--- a/app/views/home/unsubscribe.html.erb
+++ b/app/views/home/unsubscribe.html.erb
@@ -10,7 +10,7 @@
 <div id="main-terms">
 	<div class="content">
 		<h2>We're sorry to see you go!</h2>
-		<p>To unsubscribe, send us an email asking to be removed: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.  If you'd be willing to share the reason why you are leaving or have feedback on how we can improve the service, we'd love to it.</p>
+		<p>To unsubscribe, send us an email asking to be removed: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.  If you'd be willing to share the reason why you are leaving or have feedback on how we can improve the service, we'd love to hear it.</p>
 	</div>
     <%= render 'layouts/footer' %>
 </div>
