fix faq page and other smooth scrolling for windows phone by adding # support and offsets

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -293,3 +293,20 @@ a:hover, a:active {
 .faq-question-list p {
 	padding-left: 22px; text-indent: -22px; margin-top: 0em; margin-bottom: 0em;
 }
+
+.faq-li-item {
+	margin-bottom: 1em;
+}
+
+
+#main .hashanchor {
+	position: relative; top: -70px;
+}
+
+.hashanchor-special {
+	position: relative; top: -20px;
+}
+
+#main-terms .hashanchor {
+	position: relative; top: -100px;
+}
