--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -12,78 +12,94 @@
 		<h2>Thank You!</h2>
 		<p><em>We've been getting a lot of great questions.  We'll do our best to keep this page updated, so please keep the questions coming! Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</em></p>
 		<div id="faq">
-			<h2 id="section-question-top">Questions</h2>
+			<div class="hashanchor" id="question-top"></div>
+			<h2>Questions</h2>
 			<div class="faq-question-list">
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-1')">Who is Vest Me, LLC?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-2')">Are you registered financial advisors?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-3')">Why do you need my email address, and how will it be used?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-4')">If I sign up, will you be able to see what's in my Microsoft 401k account?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-5')">What's in it for you?  How will you make money?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-6')">Don't you need to know my age to adjust for how many years I have left until retirement?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-7')">Are you saying age doesn't matter when it comes to investing?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-8')">How do you determine the monthly allocations?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-9')">How do you account for transaction costs and short-term trading fees?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-10')">Why do you recommend rebalancing monthly?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-11')">Is it safe to rebalance monthly?  What about round trip restrictions?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-12')">On what day will you be sending out the rebalance notifications?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-13')">How big are the changes in allocations from month to month?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-14')">Why do you tell me to direct all my future contributions into what is essentially cash?</a></p>
-				<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-15')">What if I currently have money in MSFT or BrokerageLink?</a></p>
+				<p><a class="smoothscroll" href="#question-1" onclick="top_link_scroll('question-1')">Who is Vest Me, LLC?</a></p>
+				<p><a class="smoothscroll" href="#question-2" onclick="top_link_scroll('question-2')">Are you registered financial advisors?</a></p>
+				<p><a class="smoothscroll" href="#question-3" onclick="top_link_scroll('question-3')">Why do you need my email address, and how will it be used?</a></p>
+				<p><a class="smoothscroll" href="#question-4" onclick="top_link_scroll('question-4')">If I sign up, will you be able to see what's in my Microsoft 401k account?</a></p>
+				<p><a class="smoothscroll" href="#question-5" onclick="top_link_scroll('question-5')">What's in it for you?  How will you make money?</a></p>
+				<p><a class="smoothscroll" href="#question-6" onclick="top_link_scroll('question-6')">Don't you need to know my age to adjust for how many years I have left until retirement?</a></p>
+				<p><a class="smoothscroll" href="#question-7" onclick="top_link_scroll('question-7')">Are you saying age doesn't matter when it comes to investing?</a></p>
+				<p><a class="smoothscroll" href="#question-8" onclick="top_link_scroll('question-8')">How do you determine the monthly allocations?</a></p>
+				<p><a class="smoothscroll" href="#question-9" onclick="top_link_scroll('question-9')">How do you account for transaction costs and short-term trading fees?</a></p>
+				<p><a class="smoothscroll" href="#question-10" onclick="top_link_scroll('question-10')">Why do you recommend rebalancing monthly?</a></p>
+				<p><a class="smoothscroll" href="#question-11" onclick="top_link_scroll('question-11')">Is it safe to rebalance monthly?  What about round trip restrictions?</a></p>
+				<p><a class="smoothscroll" href="#question-12" onclick="top_link_scroll('question-12')">On what day will you be sending out the rebalance notifications?</a></p>
+				<p><a class="smoothscroll" href="#question-13" onclick="top_link_scroll('question-13')">How big are the changes in allocations from month to month?</a></p>
+				<p><a class="smoothscroll" href="#question-14" onclick="top_link_scroll('question-14')">Why do you tell me to direct all my future contributions into what is essentially cash?</a></p>
+				<p><a class="smoothscroll" href="#question-15" onclick="top_link_scroll('question-15')">What if I currently have money in MSFT or BrokerageLink?</a></p>
 			</div>
-			<h3 id="section-question-1">Who is Vest Me, LLC?</h3>
+			<div class="hashanchor" id="question-1"></div>
+			<h3>Who is Vest Me, LLC?</h3>
 			<p>Vest Me, LLC is the registered entity responsible for the MSFT401k.com domain and service.  Currently, MSFT401k.com is our only offering, but we may release other products and services in the future.  We chose the name Vest Me because our vision is to empower people to invest their own money with confidence.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-2">Are you registered financial advisors?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-2"></div>
+			<h3>Are you registered financial advisors?</h3>
 			<p>We are not a registered broker dealer or financial advisors. We do not provide individualized investment advice &mdash; we provide the same information to everyone under the Microsoft 401k Plan.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-3">Why do you need my email address, and how will it be used?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-3"></div>
+			<h3>Why do you need my email address, and how will it be used?</h3>
 			<p>Your privacy is extremely important to us.  We'll never sell or spam your email.  We use your email as the way to notify you of changes to allocations and send other important announcements.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-4">If I sign up, will you be able to see what's in my Microsoft 401k account?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-4"></div>
+			<h3>If I sign up, will you be able to see what's in my Microsoft 401k account?</h3>
 			<p>No, we will not.  We never ask for any personal information, so we can't see what's in your account.  We provide allocations for the Microsoft 401k Plan; then, you log in and rebalance by yourself, so you're always 100% in control.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-5">What's in it for you?  How will you make money?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-5"></div>
+			<h3>What's in it for you?  How will you make money?</h3>
 			<p>MSFT401k.com is a free service, and we receive no compensation for running it.  Our focus right now is on building the best service possible to help Microsoft 401k plan participants, but we may release other products and services in the future for a fee.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-6">Don't you need to know my age to adjust for how many years I have left until retirement?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-6"></div>
+			<h3>Don't you need to know my age to adjust for how many years I have left until retirement?</h3>
 			<p>Our current offering is a moderate strategy that aims to maximize returns per unit of risk, which we believe is a good strategy for 401k accounts regardless of age.  Because your 401k assets are the foundation for your retirement, being a bit on the conservative side is not so bad.  But, we may release more aggressive strategies in the future for those who want to take on more risk.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-7">Are you saying age doesn't matter when it comes to investing?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-7"></div>
+			<h3>Are you saying age doesn't matter when it comes to investing?</h3>
 			<p>Not at all &mdash; of course, age matters.  When you are younger, you have many years ahead of you where you will be earning money.  That's kind of like having a large portion of your overall assets automatically allocated to bonds.  As you move closer to retirement, moving more money into bonds is generally recommended to offset the fact that you have fewer years left where you will be earning money.</p>
 			<p>But, that is for general investment. We are targeting the 401k, which is a slightly different ball game.  For example, each year, you are limited in the amount you can contribute to your 401k.  Also, gains grow on a tax-deferred basis, and there are no transaction fees.  We believe we have a strategy that works well particularly for 401k accounts regardless of age.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-8">How do you determine the monthly allocations?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-8"></div>
+			<h3>How do you determine the monthly allocations?</h3>
 			<p>The goal of the strategy is to maximize returns per unit of risk.</p>
 			<ol style="padding-left: 60px; padding-right: 60px;">
-				<li style="margin-bottom: 1em;">We start with a basket of funds.  We choose funds with low management fees and diversify among several asset classes: Large Cap Domestic Stock, Small Cap Domestic Stock, International Stock, and Bonds.</li>
-				<li style="margin-bottom: 1em;">Next, we measure and track market risk using price volatility: higher volatility means higher risk.</li>
-				<li style="margin-bottom: 1em;">Then, we choose allocations among the asset classes to maximize returns per unit of risk.</li>
+				<li class="faq-li-item">We start with a basket of funds.  We choose funds with low management fees and diversify among several asset classes: Large Cap Domestic Stock, Small Cap Domestic Stock, International Stock, and Bonds.</li>
+				<li class="faq-li-item">Next, we measure and track market risk using price volatility: higher volatility means higher risk.</li>
+				<li class="faq-li-item">Then, we choose allocations among the asset classes to maximize returns per unit of risk.</li>
 			</ol>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-9">How do you account for transaction costs and short-term trading fees?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-9"></div>
+			<h3>How do you account for transaction costs and short-term trading fees?</h3>
 			<p>There are none for the Microsoft 401k Plan. </p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-10">Why do you recommend rebalancing monthly?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-10"></div>
+			<h3>Why do you recommend rebalancing monthly?</h3>
 			<p>It is common practice among institutional investors to rebalance on a monthly basis.  Also, the Microsoft 401k Plan results in no transaction costs or additional fees when rebalanced per our scheduled, so this allows you to take full advantage of market swings and maintain the optimal allocation in your portfolio.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-11">Is it safe to rebalance monthly?  What about round trip restrictions?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-11"></div>
+			<h3>Is it safe to rebalance monthly?  What about round trip restrictions?</h3>
 			<p>Yes, it is safe to rebalance monthly if you follow our recommended allocations and rebalance as close to the instructed date as possible, and there are no transaction costs or additional fees associated with rebalancing monthly in the Microsoft 401k Plan.</p>
 			<p>But, there is something called a round trip that you should be aware of.  According to Fidelity, "A 'round trip' is generally defined as an exchange purchase that an investor directs into a fund, followed by an exchange sale within 30 days."  Our strategy is designed to prevent round trips &mdash; it even has some additional buffer built-in because February has 28 days, and because we know not everyone will be able to rebalance exactly on the day we send out the monthly notification.</p>
 			<p>If you do execute a round trip, you will initially get a warning letter.  You will only get a round trip restriction if you execute another round trip for the same fund within 90 days.  The consequence of a round trip restriction is you will be temporarily prohibited from rebalancing that asset for 85 days (but new contributions into your 401k will be unaffected).  So, a round trip restriction is not catastrophic, and we will help you avoid it.</p>
 			<p>To sum it up, yes, it is safe to rebalance monthly according to our allocations because we have designed the strategy to prevent round trips, and because there are no transaction costs or additional fees associated with rebalancing monthly in the Microsoft 401k Plan.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-12">On what day will you be sending out the rebalance notifications?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-12"></div>
+			<h3>On what day will you be sending out the rebalance notifications?</h3>
 			<p>We will send out the rebalance notifications on the 1st of the month, and you should try to execute the rebalance as close to that date as you can.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-13">How big are the changes in allocations from month to month?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-13"></div>
+			<h3>How big are the changes in allocations from month to month?</h3>
 			<p>The average change in allocation per fund for a given month is less than 1%.  To capture the opportunity of major markets swings, changes in allocations could be as high as 10% for a given month (though, this is very uncommon).</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-14">Why do you tell me to direct all my future contributions into what is essentially cash?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-14"></div>
+			<h3>Why do you tell me to direct all my future contributions into what is essentially cash?</h3>
 			<p>We tell you to direct future contributions to your 401k into a cash equivalent because it makes it easiest to set up and rebalance and safest to protect you from round trips.  But, we know this is not ideal, and we are working on an improvement that will direct future contributions to a better allocation of assets to have your money working for you at all times.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
-			<h3 id="section-question-15">What if I currently have money in MSFT or BrokerageLink?</h3>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<div class="hashanchor" id="question-15"></div>
+			<h3>What if I currently have money in MSFT or BrokerageLink?</h3>
 			<p>In the Microsoft 401k Plan, the MSFT common stock and BrokerageLink options are essentially managed as separate accounts.  As such, if you want to allocate all your 401k assets according to our recommendation, you will first have to move money out of those, and then rebalance according to our recommendation as a second step.</p>
-			<p><a class="smoothscroll" href="#" onclick="top_link_scroll('question-top')">Back to top</a></p>
+			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 		</div>
 	</div>
 
