--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -9,9 +9,7 @@
 
 <div id="main-terms">
 	<div class="content instructions">
-
-
-		<h2 id="section-current">Rebalance Current Investments</h2>
+		<h2 class="hashanchor-special" id="current">Rebalance Current Investments</h2>
 		<div class="white-box">
 			<h3>Step 1: log into <a href="http://www.401k.com">http://www.401k.com</a></h3>
 			<img src="assets/stepbystep/Step1.png" alt="Step 1" />
@@ -61,7 +59,7 @@
 		<div class="white-box">
 			<h3>Step 1: click 'Investments Elections'<sup>**</sup></h3>
 			<img width="740" src="assets/stepbystep/FutureStep1.png" alt="Step 1 - Future Contributions" />
-			<br /><span style="font-style: italic; font-size: 80%;">** On the 'Change Investments' page after following steps 1-4 of <a class="smoothscroll" href="#" onclick="top_link_scroll('current')">Rebalance Current Investments</a>.</span>
+			<br /><span style="font-style: italic; font-size: 80%;">** On the 'Change Investments' page after following steps 1-4 of <a class="smoothscroll" href="#current" onclick="top_link_scroll('current')">Rebalance Current Investments</a>.</span>
 		</div>
 		<div class="white-box"><h3>Step 2: click 'Select Funds'
 		</h3>
