--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,7 +61,8 @@
 
 <div id="main">
 	<div class="content">
-		<div class="main-section" id="section-why">
+		<div class="main-section">
+			<div class="hashanchor-special" id="why"></div>
 			<h2>Why MSFT401k</h2>
 			<p>You're probably already contributing money into your Microsoft 401k.  If you're like most people we talked to, you set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better in just 5 minutes a month.</p>
 			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
@@ -74,7 +75,8 @@
 			<h3>Here's Where We Come In</h3>
 			<p>We help you get the most out of your 401k.  We apply proven risk management strategies utilized by complex hedge fund managers worldwide to the investment options available in the Microsoft 401k Plan.  That means you get higher returns with less volatility.  Get ready for the caviar!</p>
 		</div>
-		<div class="main-section" id="section-how" style="margin-top: -20px;">
+		<div class="hashanchor" id="how"></div>
+		<div class="main-section" style="margin-top: -20px;">
 			<h2>How It Works</h2>
 			<p>You've probably heard about the difference between stocks and bonds, particularly that stocks are "riskier." Generally speaking, that is true, and that's a core part of how this works...</p>
 			<p>We measure and track market risk and adjust allocations to get higher returns with less volatility.  When market risk is high, we put more money into bonds &mdash; to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks &mdash; to maximize gains when the stock market is doing well.  The extra secret sauce: we tailor fit it to the investment options available under the Microsoft 401k plan.</p>
@@ -90,7 +92,8 @@
 			</div>
 			<div class="clear-div"></div>
 		</div>
-		<div class="main-section" id="section-returns">
+		<div class="hashanchor" id="returns"></div>
+		<div class="main-section">
 			<h2>Our Returns</h2>
 			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against huge dips and have a smoother return.<sup>**</sup></p>
 			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturns.png" alt="Our Returns" />
@@ -105,12 +108,14 @@
 				<strong>MSFT:</strong> the Microsoft common stock.
 			</span>
 		</div>
-		<div class="main-section" id="section-vision">
+		<div class="hashanchor" id="vision"></div>
+		<div class="main-section">
 			<h2>Vision</h2>
 			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help our friends and coworkers.</p>
 			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.  And, of course, we use it ourselves.</p>
 		</div>
-		<div class="main-section" id="section-who">
+		<div class="hashanchor" id="who"></div>
+		<div class="main-section">
 			<div class="three-column-div three-column-margin">
 			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
 				<p>Joe Ollis is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
