--- a/app/views/layouts/_header_other.html.erb
+++ b/app/views/layouts/_header_other.html.erb
@@ -17,18 +17,22 @@
 		<script type="text/javascript" src="http://flesler-plugins.googlecode.com/files/jquery.scrollTo-1.4.3.1-min.js"></script>
 
 		<script>
-		function scroll_to_top(){
-			event.preventDefault();
-			if ($(window).scrollTop() != 0) $("html, body").animate({scrollTop: 0}, 800);
-		}
-		function top_link_scroll(link_target) {
-			event.preventDefault();
-			if (link_target == "") return;
-			$(window).scrollTo($('#section-' + link_target), 800, {offset: -100});
-		}
-	  	function handle_hash() {
-	  		top_link_scroll(window.location.hash.substring(1));
-  		}
+	  	if (isWPDevice != null) {
+	  		// do nothing
+	  	} else {
+			function scroll_to_top(){
+				event.preventDefault();
+				if ($(window).scrollTop() != 0) $("html, body").animate({scrollTop: 0}, 800);
+			}
+			function top_link_scroll(link_target) {
+				event.preventDefault();
+				if (link_target == "") return;
+				$(window).scrollTo($('#' + link_target), 800, {offset: -100});
+			}
+		  	function handle_hash() {
+		  		top_link_scroll(window.location.hash.substring(1));
+	  		}
+	  	}
 		</script>
 
 	</div>
