minor update to What if i have MSFT/brokeragelink question

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -98,7 +98,7 @@
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-15"></div>
 			<h3>What if I currently have money in MSFT or BrokerageLink?</h3>
-			<p>In the Microsoft 401k Plan, the MSFT common stock and BrokerageLink options are essentially managed as separate accounts.  As such, if you want to allocate all your 401k assets according to our recommendation, you will first have to move money out of those, and then rebalance according to our recommendation as a second step.</p>
+			<p>In the Microsoft 401k Plan, the MSFT common stock and BrokerageLink options are essentially managed as separate accounts.  As such, you will first have to move money out of those, and then rebalance as a second step.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 		</div>
 	</div>
