fix some faq content

--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -75,7 +75,7 @@
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-10"></div>
 			<h3>Why do you recommend rebalancing monthly?</h3>
-			<p>It is common practice among institutional investors to rebalance on a monthly basis.  Also, the Microsoft 401k Plan results in no transaction costs or additional fees when rebalanced per our scheduled, so this allows you to take full advantage of market swings and maintain the optimal allocation in your portfolio.</p>
+			<p>Rebalancing monthly is common practice among institutional investors, and it allows you to take full advantage of market swings and maintain the optimal allocation in your portfolio. For example, let's say you're holding a static allocation of 60% stocks and 40% bonds and stocks crash, leaving you with a 50%/50% allocation at the end of the month.  By rebalancing back to 60%/40% you are buying stocks, which are now cheaper, selling bonds, which are now more expensive, and returning the portfolio to your chosen strategic allocation &mdash; all smart moves. Also, the Microsoft 401k Plan results in no transaction costs or additional fees when rebalanced per our schedule.</p>
 			<p><a class="smoothscroll" href="#question-top" onclick="top_link_scroll('question-top')">Back to top</a></p>
 			<div class="hashanchor" id="question-11"></div>
 			<h3>Is it safe to rebalance monthly?  What about round trip restrictions?</h3>
