fix scrolling offset issues; link for why on phone probably broken now...

--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -9,7 +9,7 @@
 
 <div id="main-terms">
 	<div class="content instructions">
-		<h2 class="hashanchor-special" id="current">Rebalance Current Investments</h2>
+		<h2 style="padding-top: 70px; margin-bottom: -70px; position: relative; top: -60px;" id="current">Rebalance Current Investments</h2>
 		<div class="white-box">
 			<h3>Step 1: log into <a href="http://www.401k.com">http://www.401k.com</a></h3>
 			<img src="assets/stepbystep/Step1.png" alt="Step 1" />
