--- a/app/views/layouts/_header_other.html.erb
+++ b/app/views/layouts/_header_other.html.erb
@@ -27,7 +27,7 @@
 			function top_link_scroll(link_target) {
 				event.preventDefault();
 				if (link_target == "") return;
-				$(window).scrollTo($('#' + link_target), 800, {offset: -100});
+				$(window).scrollTo($('#' + link_target), 800);
 			}
 		  	function handle_hash() {
 		  		top_link_scroll(window.location.hash.substring(1));
