semi-automating the monthly emails part 1

--- a/app/views/user_mailer/first_monthly_email.html.erb
+++ b/app/views/user_mailer/first_monthly_email.html.erb
@@ -1,3 +1,4 @@
+<% current_time = Time.parse('2013-06-01 08:30:00') # Time.now %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,8 +7,8 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">May 2013 Rebalance</h3>
-        <p>Thanks again for signing up!  If you've already updated your allocations according to the welcome email you received in April, you're all set for this month.<sup>*</sup>  Your next rebalance will be on June 1.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year %> Rebalance</h3>
+        <p>Thanks again for signing up!  If you've already updated your allocations according to the welcome email you received in April, you're all set for this month.<sup>*</sup>  Your next rebalance will be on <%= Date::MONTHNAMES[(current_time.month + 1) % 12] %> 1.</p>
         <p style="font-style: italic; font-size: 70%;">* If you didn't get a chance to update your allocations in April, you can <a href="<%= 'http://www.msft401k.com/users/resend?email=' + @email %>">rebalance to the May allocations</a> now.</p>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Questions</h3>
         <p>We've been getting a lot of great questions.  Check out the <a href="http://www.msft401k.com/faq">FAQ</a>.  If you have any other questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
