--- a/app/views/user_mailer/regular_monthly_email.html.erb
+++ b/app/views/user_mailer/regular_monthly_email.html.erb
@@ -1,4 +1,4 @@
-<% current_time = Time.now %>
+<% current_time = Time.parse('2013-06-01 08:30:00') # Time.now %>
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,10 +7,8 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
-        <p>You're smart!  You've taken the first step toward higher returns and reduced volatility for your 401k.</p>
-        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
-        <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this month's allocations.<sup>*</sup>  You should complete this rebalance by <%= Date::MONTHNAMES[current_time.month] + " " + Time.days_in_month(current_time.month).to_s %>.  In the future, we'll send you new allocations on the 1st of every month.  Your next rebalance notification will be on <%= Date::MONTHNAMES[(current_time.month + 2) % 12] %> 1.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;"><%= Date::MONTHNAMES[current_time.month] + " " + current_time.year %> Rebalance</h3>
+        <p>Here are this month's allocations.  You should complete this rebalance as soon as you can using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a>.  Questions? Check out the <a href="http://www.msft401k.com/faq">FAQ</a> or drop us a line: <a href="mailto:team@MSFT401k.com">team@msft401k.com</a>.</p>
         <h4 style="margin: 20px 0px 5px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 120%;">Allocations</h4>
         <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
           <tr>
@@ -54,7 +52,6 @@
             <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 10px; text-align: right;">100.00%</td>
           </tr>
         </table>
-        <p style="font-style: italic; font-size: 70%;">* Rebalancing to these allocations may result in a round-trip warning if you have rebalanced your portoflio within the past 30 days.</p>
         <br /><hr />
         <div style="font-size: 80%; font-family: ProximaNovaBold, 'Helvetica Neue', Arial, sans-serif;">
           <p><a href="http://www.msft401k.com/faq">FAQ</a> | <a href="mailto:team@MSFT401k.com">Contact Us</a> | <a href="http://www.msft401k.com/terms">Terms</a> | <a href="http://www.msft401k.com/unsubscribe">Unsubscribe</a></p>          
